--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
